--- a/app/src/main/res/layout/fragment_detalle_planet.xml
+++ b/app/src/main/res/layout/fragment_detalle_planet.xml
@@ -1,14 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetallePlanetFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".presentation.ui.DetallePlanetFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/ivPlanet"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:importantForAccessibility="no"
+            android:layout_margin="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvPlanet"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="34sp"
+            android:layout_margin="24dp"
+            android:text="@string/planet"
+            app:layout_constraintTop_toTopOf="@id/ivPlanet"
+            app:layout_constraintBottom_toBottomOf="@id/ivPlanet"
+            app:layout_constraintStart_toEndOf="@id/ivPlanet"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <!--Pares de valores-->
+
+        <TextView
+            android:id="@+id/tvRotationPeriod"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/title_rotation"
+            app:layout_constraintTop_toBottomOf="@id/ivPlanet"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvRotationPeriodValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="24dp"
+            android:text="@string/dummy_value"
+            app:layout_constraintTop_toTopOf="@id/tvRotationPeriod"
+            app:layout_constraintBottom_toBottomOf="@id/tvRotationPeriod"
+            app:layout_constraintStart_toEndOf="@id/tvRotationPeriod"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+
+        <TextView
+            android:id="@+id/tvOrbitalTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/title_orbital"
+            app:layout_constraintTop_toBottomOf="@id/tvRotationPeriod"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvOrbitalValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="24dp"
+            android:text="@string/dummy_value"
+            app:layout_constraintTop_toTopOf="@id/tvOrbitalTitle"
+            app:layout_constraintBottom_toBottomOf="@id/tvOrbitalTitle"
+            app:layout_constraintStart_toEndOf="@id/tvOrbitalTitle"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+
+        <TextView
+            android:id="@+id/tvDiametroTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/title_diametro"
+            app:layout_constraintTop_toBottomOf="@id/tvOrbitalTitle"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvDiametroValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="24dp"
+            android:text="@string/dummy_value"
+            app:layout_constraintTop_toTopOf="@id/tvDiametroTitle"
+            app:layout_constraintBottom_toBottomOf="@id/tvDiametroTitle"
+            app:layout_constraintStart_toEndOf="@id/tvDiametroTitle"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvClimateTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/title_climate"
+            app:layout_constraintTop_toBottomOf="@id/tvDiametroTitle"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvClimateValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="24dp"
+            android:text="@string/dummy_value"
+            app:layout_constraintTop_toTopOf="@id/tvClimateTitle"
+            app:layout_constraintBottom_toBottomOf="@id/tvClimateTitle"
+            app:layout_constraintStart_toEndOf="@id/tvClimateTitle"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvGravityTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/title_gravity"
+            app:layout_constraintTop_toBottomOf="@id/tvClimateTitle"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvGravityValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="24dp"
+            android:text="@string/dummy_value"
+            app:layout_constraintTop_toTopOf="@id/tvGravityTitle"
+            app:layout_constraintBottom_toBottomOf="@id/tvGravityTitle"
+            app:layout_constraintStart_toEndOf="@id/tvGravityTitle"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
